PROJECT(KCVCalculator C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET( ${PROJECT_NAME}_MAJOR 1 )
SET( ${PROJECT_NAME}_MINOR 1 )
SET( ${PROJECT_NAME}_BUILD 0 )
SET(VERSION "${${CMAKE_PROJECT_NAME}_MAJOR}.${${CMAKE_PROJECT_NAME}_MINOR}.${${CMAKE_PROJECT_NAME}_BUILD}")

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules/)

IF(UNIX)
  set(DOCUMENTATION_DIRECTORY "share/doc/${PROJECT_NAME}")
ELSE(UNIX)
  set(DOCUMENTATION_DIRECTORY "doc")
ENDIF(UNIX)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/COPYING
              ${CMAKE_CURRENT_SOURCE_DIR}/COPYING.LESSER
              ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE
              ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.GlobalPlatform
              ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.OpenSSL
              ${CMAKE_CURRENT_SOURCE_DIR}/README
              DESTINATION ${DOCUMENTATION_DIRECTORY})
              
ADD_SUBDIRECTORY(src)
